--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -24,17 +24,19 @@ html {
 }
 
 body, html {
-background: #fff!important;
-min-height: 100%;
-margin: 0px;
-padding: 0px;
+/*background: #efefef!important;*/
+  background: url(http://subtlepatterns.com/patterns/pw_maze_white.png)!important;
+  min-height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
+
 
 header {
   border-bottom: 0px solid #89BD04;
   margin: 0px auto;
   padding-bottom: 25px;
-  width: 1140px;
+    width: 100%;
 }
 
 header div {
@@ -43,7 +45,7 @@ vertical-align: top;
 }
 
 header div#logo {
-    padding-top: 0px;
+    padding-top: 12px;
       margin-bottom: 15px;
 }
 
@@ -61,7 +63,7 @@ text-decoration: none;
 }
 
 #form, #thanks {
-background: #888;
+/*background: #888;*/
   width: 1138px;
     margin: -169px auto;
   padding-bottom: 80px;
@@ -84,21 +86,20 @@ background: #888;
 }
 
 #form p {
-font-family: 'Open Sans', sans-serif;
-font-size: 18px;
-margin: auto;
-margin-bottom: 30px;
-text-align: center;
-width: 727px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    margin: auto;
+    margin-bottom: 30px;
+    text-align: center;
+    width: 100%;
 }
 
 #form div#container {
-  background: #ebe9e9;
   border-radius: 0px;
-  margin: auto;
+  margin: 0px auto;
   /* height: 133px; */
-  padding: 24px 0px 33px 0px;
-  width: 613px;
+  padding: 0px;
+    width: 100%;
 }
 
 #form div h2 {
@@ -123,8 +124,7 @@ width: 727px;
 
 #form div form {
     border-radius: 5px;
-    padding-top: 20px;
-    background: #ebe9e9;
+    padding-top: 55px;
 }
 
 #form div form div {
@@ -141,7 +141,7 @@ margin-bottom: 0px;
 }
 
 #form div form div label {
-  width: 130px;
+  /*width: 130px;
   padding-right: 15px;
   text-align: right;
   vertical-align: middle;
@@ -149,7 +149,22 @@ margin-bottom: 0px;
   text-align: left;
   color: #4e4e4e;
   font-size: 16px;
+  font-weight: normal;*/
+  padding: 10px 14px 14px 21px;
+  color: #fff;
+  background-color: #0096d7;
+  width: 130px;
+  /* padding-right: 15px; */
+  text-align: right;
+  vertical-align: middle;
+  margin-left: 30px;
+  margin-bottom: 0px;
+  text-align: left;
+  color: #fff;
+  font-size: 16px;
   font-weight: normal;
+  position: relative;
+  z-index: 15;
 }
 
 
@@ -174,15 +189,25 @@ border-radius:0spx;
 border: 0px solid #ccc;
 padding: 15px;
     height:5px;
-    width:250px;
+    width: 100%;
 }
 
 #form div form div.large input {
-      width: 410px;
+      width: 100%;
+      height: 45px;
 }
 
+
+
 #form div form div.required input {
-      border: 1px solid #ccc;
+        border: 1px solid #ccc;
+  height: 47px;
+  margin-top: 12px;
+  margin-left: -5px;
+    background-image: url(http://ensitedev.paradisosolutions.com/images/blue-arrow.png);
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 13;
 }
 
 #form .form-control-2 input[type=file] {
@@ -195,8 +220,11 @@ padding: 15px;
   border-radius: 0px;
   /* width: 100%; */
   display: block;
-  height: 32px;
+  height: 21px;
   padding-top: 17px;
+  margin: 0px 7px 0px 0px;
+  float: left;
+  padding-left: 9px;
 }
 
 #form div form div.textarea label {
@@ -213,11 +241,12 @@ width: 350px;
 }
 
 #submit {
-  margin: 0px;
+   margin: 0px;
   /* text-align: center; */
-  width: 499px;
-  margin-left: 82px;
-  margin-right: 0px;
+  width: 100%;
+  /* margin-left: 82px; */
+  /* margin-right: 0px; */
+  margin: 0px auto;
 }
 
 .error{margin-left:170px;font-size:12px;color:red;display:block}
@@ -290,14 +319,14 @@ font-family: 'Open Sans', sans-serif;
 margin: auto;
 padding-bottom: 20px;
 padding-top: 20px;
-width: 900px;
+width: 100%!important;
 }
 
 #container-head {
 background: #FFF;
 margin: auto;
 padding: 15px;
-width: 585px;
+  width: 100%!important;
 }
 
 #social-networks {
@@ -317,7 +346,9 @@ display: inline-block;
 }
 
 #logo {
-width: 147px;
+  width: 186px;
+  margin: 33px auto;
+  display: block;
 }
 
 #container-head > h2 {
@@ -334,7 +365,7 @@ font-size: 28px;
 #container-body {
 background: #FFF;
 margin: auto;
-width: 615px;
+  width: 100%!important;
 font-size: 18px;
 margin-top: 20px;
 padding-bottom: 0px;
@@ -360,14 +391,38 @@ float: right;
 #text-top  {
      margin-top: -33px;
 }
- 
 
-#text-top h2 {
+
+.despues {
+  display:none;
+}
+ 
+ #text-top h2{
+  display: none;
+}
+
+
+#text-top h2.tryfree {
   text-align: center;
   color: #0096d7;
-  padding: 13px;
-  background-color: #efefef;
-  width: 1140px;
+  margin: 13px 0px;
+  display:block!important;
+  text-shadow: 0px 1px #fff;
+}
+
+
+#text-top h2:nth-child(2) {
+      margin-top: -10px;
+      font-size: 22px;
+}
+
+.wrapper {
+  width: 100%;
+  margin: 0px auto;
+}
+
+#wrapper-top {
+  width: 100%;
   margin: 0px auto;
 }
 
@@ -393,7 +448,7 @@ float: right;
   background-position: 428px 0px;
   height: 41px;
   width: 1138px;
-  margin: 0px auto;
+  margin: 0px auto 40px;
   position: relative;  
 }
 
@@ -403,14 +458,20 @@ float: right;
   padding: 11px 25px;
   margin: 0px;
   width: 412px;
-  margin: 24px 427px;
+  margin: -6px 427px;
   font-size: 1.3em;
   text-transform: uppercase;
   color: #0093d6;
   font-weight: normal;
 }
 
-#supported_formats_label{font-size:12px;float:right;margin-top:10px;margin-right:40px}
+#supported_formats_label{  
+  font-size: 11.5px;
+  float: right;
+  margin-top: 13px;
+  margin-right: 40px;
+  padding-left: 9px;
+  border-left: 1px solid #888;}
 #recommended_size_label{
   font-size: 12px;
   margin-left: 164px;
@@ -588,9 +649,7 @@ float: right;
 /* aside */
 
 #centrar {
-    width: 452px;
-  /* margin: 0px auto; */
-  /* top: 0px; */
+  top: -50px;
   float: right;
   position: relative;
 }
@@ -659,12 +718,500 @@ float: right;
 }
 
 #form {
-  background: #efefef;
-  width: 1138px;
-margin: -95px auto 0px;
+  width: 100%;
+  margin: -95px auto 0px;
   padding-bottom: 80px;
-  padding-top: 0px;  
+  padding-top: 0px;
 }
+
+#form .form-control-2 input[type=file] {
+  background-color: #fff;
+  height: auto!important;
+  width: 411px;
+}
+
+.fa {
+  margin-left: 5px;
+}
+
+
+/* CSS Form */
+
+
+.contactpopup {
+  display: none;
+  background: #fff;
+  border: 1px solid #D8D9DD;
+  border-radius: 5px;
+  font-family: 'Open sans' sans-serif;
+  height: 452px;
+  /* left: 50%; */
+  /* right: 50%; */
+  width: 960px;
+  margin: 0px auto;
+  padding: 18px 46px;
+  position: fixed;
+  top: 200px;
+  z-index: 30000;
+}
+
+.close {
+  float: right;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  filter: alpha(opacity=20);
+  opacity: .2;
+}
+
+.contactpopup h3 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.contactpopup p {
+  color: #5B5B5F;
+  font-size: 14px;
+}
+
+.contactpopup h4 {
+  color: #211915;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+}
+
+form#blockcontact_ {
+  display: block;
+  margin-top: 0em;
+}
+
+.contactpopup input, .contactpopup textarea {
+  border: 1px solid #009BDB;
+  border-radius: 5px;
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 8px;
+    width: 298px;
+}
+
+.contactpopup h5 {
+  background: url('https://www.paradisosolutions.com/templates/paradiso/img/phonepopup.png') no-repeat left;
+  display: inline-block;
+  font-size: 19px;
+  margin-top: 0px;
+  padding-bottom: 20px;
+  padding-left: 70px;
+  padding-top: 20px;
+  width: 300px;
+}
+
+.contactpopup button {
+  background: #a1bc31;
+  background: -moz-linear-gradient(top, #a1bc31 1%, #70a63b 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#a1bc31), color-stop(100%,#70a63b));
+  background: -webkit-linear-gradient(top, #a1bc31 1%,#70a63b 100%);
+  background: -o-linear-gradient(top, #a1bc31 1%,#70a63b 100%);
+  background: -ms-linear-gradient(top, #a1bc31 1%,#70a63b 100%);
+  background: linear-gradient(to bottom, #a1bc31 1%,#70a63b 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1bc31', endColorstr='#70a63b',GradientType=0 );
+  border: 0px;
+  border-radius: 10px;
+  color: #fff;
+  font-family: 'Open sans' sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  float: right;
+  padding: 7px 0;
+  text-align: center;
+  width: 252px;
+}
+
+.displayBlock {
+    display: block!important;
+}
+
+
+#right-buttonss {
+  position: absolute;
+  top: 0px;
+  right: 133px; 
+}
+
+#centrar {
+
+}
+
+.top-links{
+   
+    
+}
+
+#centrar-absolute {
+  position: relative;
+  float: none;
+  display: block;
+  width: 100%;
+  margin: 0px auto;
+}
+
+#form p.terms {
+  color: #4e4e4e;
+  font-size: 12px;
+  font-weight: normal;
+  margin-top: 13px;
+  margin-bottom: 13px;
+}
+
+
+#clickdesk-appendable-bubble {
+    display: none;
+}
+
+
+#submit input[type="submit"] {
+  margin: 0px;
+}
+
+
+#contactmsgsuccess {
+  display: none;
+  font-family: 'Open sans' sans-serif;
+  text-align: center;
+  padding-top: 10px;
+}
+
+
+#contactusmsgerror {
+  color: #f00;
+  display: none;
+  font-family: 'Open sans' sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 10px;
+}
+
+
+.fancybox-close {
+  background-image: url(http://ensitedev.paradisosolutions.com/images/btnClose.png);
+  background-repeat: no-repeat;
+
+  }
+
+
+
+  /*
+  MESSAGE EMAIL
+  */
+
+#message-email {
+  display:none;
+}
+
+.message-email {
+  display:block!important;
+  width: 328px;
+  padding: 10px 15px;
+  background-color: rgb(252, 113, 113);
+  margin-left: 188px;
+  color: #fff;
+}
+
+#terms-conditions {
+  background-color: #E4E4E4;
+  padding: 2px;
+  margin: 8px 9px -2px 30px;
+}
+
+
+  #test {
+  padding: 30px 54px;
+  text-align: justify;
+}
+
+
+#phone-freemium {
+  position: absolute;
+  border-radius: 5px;
+  top: -42px;
+  left: 16px;
+  padding-left: 11px;
+  padding-top: 13px;
+  padding-right: 11px;
+  margin-left: 24px;
+ /* background: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/Pgo8c3ZnIHhtbG5zPSJod…EiIGhlaWdodD0iMSIgZmlsbD0idXJsKCNncmFkLXVjZ2ctZ2VuZXJhdGVkKSIgLz4KPC9zdmc+);
+  background: -moz-linear-gradient(top, #009ada 0%, #4a72b0 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#009ada), color-stop(100%,#4a72b0));
+  background: -webkit-linear-gradient(top, #009ada 0%,#4a72b0 100%);
+  background: -o-linear-gradient(top, #009ada 0%,#4a72b0 100%);
+  background: -ms-linear-gradient(top, #009ada 0%,#4a72b0 100%);
+  background: linear-gradient(to bottom, #009ada 0%,#4a72b0 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#009ada', endColorstr='#4a72b0',GradientType=0 );*/
+  background-color: #888;
+}
+
+#phone-freemium p {
+    background-image: url(http://ensitedev.paradisosolutions.com/images/icons/phone-icon-freemium.png);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    color: #fff;
+    padding-left: 18px;
+    margin: 0px 0px 8px;
+  }
+
+
+
+
+/*  Responsive */
+
+
+
+@media screen and (min-width:768px) {
+    .col-md-12 {
+       width: 555px;
+       margin: 0px auto;
+       float: none;
+    }
+    
+    #form div form div label {
+          width: 30%;
+   }
+    
+    #form div form div.large input {
+          width: 63%;
+  }
+    
+  #form div form div.required input {
+      width: 63%;
+  }
+    
+  #submit {
+      margin: 0px;
+      width: 100%;
+      margin: 0px auto 0px 191px;
+   }
+    
+   #submit input[type="submit"] {
+     width: 200px;
+       font-size: 1.4em;
+   }
+    
+    #submit button {
+        width: 119px;
+    }
+    
+    .ventana {
+          width: 700px;
+          margin: 0px auto;
+          position: relative;
+          float: none;
+          display: block;
+    }
+    
+    .contactpopup {
+          width: 700px;
+    }
+    
+    .contactpopup h5 {
+          width: 308px;
+    }
+ 
+}
+
+@media screen and (max-width:767px) {
+
+
+  #terms-conditions {
+     margin: 0px auto;
+  }
+
+  #form div form div label {
+      margin-left: 0px;
+      background-color: #63B4D7;
+      width: 100%;
+  }
+
+
+  #form div form div.required input {
+      margin-top: 0px;
+      margin-left: 0px;
+  }
+
+  .message-email {
+      width: 100%;
+      margin-left: 0px;
+  }
+
+    .contactpopup {
+        width: 100%;
+        height: 607px;
+        top: 29px;
+        float: none;
+        margin: 0px auto;
+        border-radius: 0px;
+        border: 0px solid #D8D9DD;
+    }
+
+    .contactpopup h3 {
+        text-align: center;
+    }
+
+    .contactpopup h5 {
+        display: block;
+        width: 321px;
+        margin: 22px auto;
+    }
+
+    .contactpopup p {
+        text-align: center;
+        width: 80%;
+        margin: 0px auto;
+    }
+
+    .contactpopup button {
+      width: 252px;
+      margin: 0px auto;
+      display: block;
+      float:none;
+    }
+
+    .contactpopup input, .contactpopup textarea {
+      display: block;
+      width: 298px;
+      margin: 10px auto;
+    }
+
+
+
+    #form {
+      background: #efefef;
+      width: 303px;
+      margin: -95px auto 0px;
+      padding-bottom: 80px;
+      padding-top: 0px;
+    }
+    
+    #submit input[type="submit"] {
+      width: 303px;
+      height: 55px;
+      margin-bottom: 19px;
+   }
+    
+    #submit button {
+      width: 146px;
+      margin: 13px auto;
+      float: none;
+      display: block;
+      position: relative;
+    }
+    
+}
+
+
+@media screen and (max-width:480px) {
+
+    #test {
+      padding: 30px 2px;
+      text-align: justify;
+    }
+
+    #form {
+      background: #efefef;
+      width: 90%;
+      margin: -95px auto 0px;
+      padding-bottom: 80px;
+      padding-top: 0px;
+    }
+
+    #submit {
+      text-align: center;
+      width: 100%;
+      margin: 0px auto;
+      float: none;
+    }
+
+    #submit input[type="submit"] {
+      width: 90%;
+      float: none;
+    }
+
+    .contactpopup {
+      height: 100%;
+      top: 0px;
+    }
+
+    .contactpopup p {
+      width: 100%;
+    }
+
+}
+
+
+@media screen and (max-width:380px) {
+
+
+
+
+      header div {
+        display: block;
+    }
+    .contactpopup input, .contactpopup textarea {
+      display: block;
+      width: 100%;
+      margin: 10px auto;
+    }
+
+
+    .contactpopup button {
+        width: 100%;
+    }
+
+    .contactpopup h5 {
+      width: 92%;
+    }
+
+    .custom.top-buttons ul li {
+        display: block;
+    }
+
+    .custom.top-buttons ul li a {
+      text-decoration: none;
+      color: #ffffff;
+      display: block;
+      background-repeat: repeat-x;
+      border-radius: 0px;
+      padding: 4px;
+      width: 100%;
+      float: none;
+      margin: 0px auto;
+      text-align: center;
+      position: relative;
+      height: 33px;
+      /* vertical-align: sub; */
+      font-size: 1em;
+      border-bottom-left-radius: 6px;
+      border-bottom-right-radius: 6px;
+    }
+
+
+    #centrar {
+      top: -13px;
+      float: none;
+      position: relative;
+    }
+
+
+  }
+
+
+
+
+
+
+
 
 
 
