new option to delete free databases

--- a/module/Backend/view/backend/index/dashboard.phtml
+++ b/module/Backend/view/backend/index/dashboard.phtml
@@ -15,6 +15,16 @@ $userId = $this->GlobalVars('identity.id', 0);
             <li>
                 <a href="<?php echo $this->url('backend', array('controller' => 'instance', 'action' => 'list')); ?>">Instances</a>
             </li>
+            <li>
+                <a onclick="return _confirm()" href="<?php echo $this->url('backend', array('controller' => 'instance', 'action' => 'delete-free-db')); ?>">Delete free databases</a>
+            </li>
         </ul>
     </div>
 </div>
+
+<script>
+function _confirm()
+{
+	return confirm("Please confirm that you want to delete ALL free databases.\n This action can't be undone.");
+}
+</script>
